
- Changed the parameter names of AddForeignKey to try and make them easier to understand
- Made Version for MigrationAttribute non-optional
- Changed the Migration number to a long value so datestamps could be used.
- Added a SqlScriptFileLogger to log all of the SQL changes to a file (Thanks carl.lotz)
	- Supported in MSBuild and NAnt tasks
	
- Breaking Change!: Changed the storage of versions applied to one that keeps all the versions. This
  will help deal with branches during development. (Thanks evonzee)

## Version 0.7.0
- Geoff's major refactorings fork re-merged back into the trunk
- Improved the build process allowing developers to override things in local.properties
- Added a packaging task to generate a zip file for a build
- SQL Server Default value now supports non-quoted functions and NULL
- Compound Primary Key bug was unsetting NotNull from all the columns has been fixed
- Added a Visual Studio Template that can be installed to help create new Migrations
- Various Small bug fixes
	- Logger set after Migrations loaded in NAnt/MSBuild tasks
	- Patch for wrong string format in SQLTransformationProvider
	- One of the TranformationProvider.GenerateForeignKey methods ignores constraint
	- No warning is issued if there are no migrations found
	- Migration.InitializeOnce outputs to console

## Version 0.6.0
- Better API documentation
- Support declaring compound primary keys in the AddTable methods.
- Add support for Renaming Tables and Columns
- Add support for adding and removing Unique Constraints and Check Constraints
- Add support for changing a column definition
- Support compiling the migrations on the fly 

- Breaking Change!: Change the Insert and Update methods to separate the column names from the column values.
- Breaking Change!: Reversed the columns to have the table name first on ConstraintExists, PrimaryKeyExists and 
	RemovePrimaryKey

## Version 0.5.0
Forked the project to fix a bunch of issues.
- Major refactoring