@@ -1,0 +1,3 @@
+<%@ Application Codebehind="Global.cs"
+	Inherits="Migrator.Web.Global"
+%>
