@@ -1,0 +1,79 @@
+
+using System;
+using System.Collections;
+using System.ComponentModel;
+using System.Web;
+using System.Web.SessionState;
+
+namespace Migrator.Web
+{
+	/// <summary>
+	/// Summary description for Global.
+	/// </summary>
+	public class Global : HttpApplication
+	{
+		#region global
+		/// <summary>
+		/// Required designer variable.
+		/// </summary>
+		//private System.ComponentModel.IContainer components = null;
+
+		public Global()
+		{
+			InitializeComponent();
+		}
+
+		#endregion
+
+		protected void Application_Start(Object sender, EventArgs e)
+		{
+
+		}
+
+		protected void Session_Start(Object sender, EventArgs e)
+		{
+
+		}
+
+		protected void Application_BeginRequest(Object sender, EventArgs e)
+		{
+
+		}
+
+		protected void Application_EndRequest(Object sender, EventArgs e)
+		{
+
+		}
+
+		protected void Application_AuthenticateRequest(Object sender, EventArgs e)
+		{
+
+		}
+
+		protected void Application_Error(Object sender, EventArgs e)
+		{
+
+		}
+
+		protected void Session_End(Object sender, EventArgs e)
+		{
+
+		}
+
+		protected void Application_End(Object sender, EventArgs e)
+		{
+
+		}
+
+		#region Web Form Designer generated code
+		/// <summary>
+		/// Required method for Designer support - do not modify
+		/// the contents of this method with the code editor.
+		/// </summary>
+		private void InitializeComponent()
+		{
+
+		}
+		#endregion
+	}
+}
