@@ -1,0 +1,6 @@
+= Migrator DotNet Contrib
+Projects and pieces contributed to Migrator DotNet that are outside of the core concepts or usecases.
+Still interesting and might be useful.
+
+If they're useful enough, tell us to roll them into the core!
+
