@@ -1,0 +1,2 @@
+@..\lib\nant\nant.exe -buildfile:default.build %*
+pause
