@@ -2,7 +2,7 @@
 <project name="migrator" default="build" xmlns="http://nant.sf.net/release/0.85/nant.xsd">
 	<property name="defines" value="DOTNET2" if="${framework::get-target-framework() == 'net-2.0' or framework::get-target-framework() == 'net-3.5'}" />
 	<property name="defines" value="MONO2" if="${framework::get-target-framework() == 'mono-2.0'}" />
-    <property name="version" value="0.7.0"/>
+    <property name="version" value="0.8"/>
     
 	<property name="debug" value="true" />
 	
